--- a/Demo/src/main/res/layout/activity_main.xml
+++ b/Demo/src/main/res/layout/activity_main.xml
@@ -46,4 +46,31 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/bu_main_reward_video_request" />
 
+
+    <Button
+        android:id="@+id/bu_main_interstitial_request"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="12dp"
+        android:text="请求插屏广告"
+        android:textColor="#FFFFFF"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/bu_main_reward_video_show" />
+
+    <Button
+        android:id="@+id/bu_main_interstitial_show"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="12dp"
+        android:text="展示插屏广告"
+        android:textColor="#FFFFFF"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/bu_main_interstitial_request" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
