--- a/Demo/src/main/res/values/themes.xml
+++ b/Demo/src/main/res/values/themes.xml
@@ -9,4 +9,20 @@
         <item name="colorOnSecondary">@color/black</item>
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
     </style>
+
+    <style name="CustomDialogFragment" parent="@android:style/Theme.Dialog">
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowIsTranslucent">false</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:colorBackgroundCacheHint">@null</item>
+        <item name="android:windowNoTitle">true</item>
+    </style>
+
+    <style name="CustomDialogFragmentAnimation">
+        <item name="android:windowEnterAnimation">@anim/anim_dialog_fragment_enter</item>
+        <item name="android:windowExitAnimation">@anim/anim_dialog_fragment_exit</item>
+    </style>
+
 </resources>
