--- a/Demo/src/main/res/layout/activity_main.xml
+++ b/Demo/src/main/res/layout/activity_main.xml
@@ -21,31 +21,17 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/bu_main_reward_video_request"
+        android:id="@+id/bu_main_reward_video"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="12dp"
-        android:text="请求激励视频广告"
+        android:text="配置激励视频广告广告"
         android:textColor="#FFFFFF"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/bu_main_splash" />
-
-    <Button
-        android:id="@+id/bu_main_reward_video_show"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="12dp"
-        android:text="展示激励视频广告"
-        android:textColor="#FFFFFF"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/bu_main_reward_video_request" />
-
 
     <Button
         android:id="@+id/bu_main_interstitial_request"
@@ -58,7 +44,7 @@
         android:textColor="#FFFFFF"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/bu_main_reward_video_show" />
+        app:layout_constraintTop_toBottomOf="@id/bu_main_reward_video" />
 
     <Button
         android:id="@+id/bu_main_interstitial_show"
